# PointNet

./: .gitignore  README.md  app.py  eval.py  pyproject.toml  requirements.txt  train.py
configs/: train_cls.yaml  train_partseg.yaml  train_semseg.yaml
pointnet/: __init__.py  metrics.py  modelnet40.py  pointnet.py  pointnet_pp.py
pointnet/models/: __init__.py  pointnet.py  pointnet2_partseg.py  pointnet_pp.py
pointnet/modules/: sampling.py
pointnet2/: __init__.py
pointnet2/models/: __init__.py  pointnet2_cls.py  pointnet2_partseg.py  pointnet2_semseg.py
pointnet2/modules/: __init__.py  grouping.py  sampling.py  set_abstraction.py
pointnet2/utils/: __init__.py  metrics.py
scripts/: prepare_samples.py
tests/: test_grouping.py  test_sampling.py  test_set_abstraction.py
