[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointnet2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pytorch-lightning>=2.1",
    "hydra-core>=1.3",
    "wandb>=0.16",
    "open3d>=0.18",
    "torch-geometric>=2.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "black>=23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pointnet2*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
